# nuklear_eve

./: .clang-format  .cproject  .editorconfig  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md
CMake/: FindBT8XXEMU.cmake  FindNuklear.cmake
demo/: CMakeLists.txt  main.c
dependencies/bt8xxemu/include/: bt8xxemu.h  bt8xxemu_inttypes.h
dependencies/bt8xxemu/lib/: bt8xxemu.lib
dependencies/bt8xxemu/lib64/: bt8xxemu.lib
dependencies/bt8xxemu/src/: bt8xxemuc.c
dependencies/esd_core/: CMakeLists.txt  CoPro_Cmds.c  CoPro_Cmds.h  ESD_Base.c  ESD_Base.h  ESD_BitmapHandle.c  ESD_BitmapHandle.h  ESD_BitmapInfo.c  ESD_BitmapInfo.h  ESD_CheckTypeSizes.c  ESD_CoWidget.c  ESD_CoWidget.h  ESD_Context.c  ESD_Context.h  ESD_Core.h  ESD_FontInfo.c  ESD_FontInfo.h  ESD_GpuAlloc.c  ESD_GpuAlloc.h  ESD_Math.c  ESD_Math.h  ESD_Render.c  ESD_Render.h  ESD_Render_Bitmap.c  ESD_Render_Circle.c  ESD_Render_Gradient.c  ESD_Render_Rect.c  ESD_ResourceInfo.c  ESD_ResourceInfo.h  ESD_Scissor.c  ESD_Scissor.h  ESD_Support.c  ESD_TouchTag.c  ESD_TouchTag.h  ESD_Utility.c  ESD_Utility.h  Esd_AnimationInfo.c  Esd_AnimationInfo.h  Esd_Base.c  Esd_Base.h  (+73 more)
dependencies/esd_core/Compatibility/: CoPro_Cmds.h  FT_CoPro_Cmds.h  Ft_Esd.h  Ft_Esd_BitmapHandle.h  Ft_Esd_BitmapInfo.h  Ft_Esd_CoCmd.h  Ft_Esd_Core.h  Ft_Esd_Dl.h  Ft_Esd_FontInfo.h  Ft_Esd_GpuAlloc.h  Ft_Esd_Math.h  Ft_Esd_Primitives.h  Ft_Esd_ResourceInfo.h  Ft_Esd_TouchTag.h  Ft_Esd_Utility.h
dependencies/eve_hal/: CMakeLists.txt  EVE_Cmd.c  EVE_Cmd.h  EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_CoCmd_State.c  EVE_CoCmd_Widgets.c  EVE_CoDl.c  EVE_CoDl.h  EVE_Config.h  EVE_EmulatorMain.c  EVE_EmulatorMain.h  EVE_Gpu.h  EVE_GpuDefs.h  EVE_GpuDefs_BT81X.c  EVE_GpuDefs_BT88X.c  EVE_GpuDefs_FT80X.c  EVE_GpuDefs_FT81X.c  EVE_GpuTypes.h  EVE_Hal.c  EVE_Hal.h  EVE_Hal.md  EVE_HalDefs.h  EVE_HalImpl.h  EVE_HalImpl_BT8XXEMU.c  EVE_HalImpl_BT8XXEMUC.c  EVE_HalImpl_FT4222.c  EVE_HalImpl_FT900.c  EVE_HalImpl_FT9XX.c  EVE_HalImpl_LINUX.c  EVE_HalImpl_MPSSE.c  EVE_HalImpl_MULTI.c  EVE_HalImpl_RP2040.c  EVE_HalImpl_WIN32.c  EVE_ILI9488.h  EVE_ILI9488_FT900.c  EVE_ILI9488_FT9XX.c  EVE_ILI9488_RP2040.c  EVE_IntTypes.h  (+46 more)
dependencies/eve_hal/Hdr/: App_Common.h  CoPro_Cmds.h  Eve_CoCmd.h  FT_CoPro_Cmds.h  FT_DataTypes.h  FT_Gpu.h  FT_Gpu_Hal.h  FT_Hal_Utils.h  FT_LoadFile.h  FT_Platform.h  Gpu.h  Gpu_CoCmd.h  Gpu_Hal.h  Hal_Config.h  Hal_Utils.h  ILI9488.h  Platform.h  SampleApp.h
dependencies/eve_hal/Hdr/Arduino/: Hal_I2C.h  Platform.h  sdcard.h
dependencies/eve_hal/Hdr/FT900/: FT_KD2401.h  FT_Platform_FT900.h
dependencies/eve_hal/Hdr/FT90x/: Platform.h  diskio.h  ffconf.h
dependencies/eve_hal/Hdr/FT93x/: Platform.h
dependencies/eve_hal/Hdr/MSVC/: FT_Gpu_Hal_MSVC.h  FT_Platform_MSVC.h
dependencies/eve_hal/Hdr/Msvc/: LibFT4222.h  Platform.h  ftd2xx.h  libMPSSE_spi.h
dependencies/eve_hal/Hdr/Msvc_Emulator/: Emulator.h  EmulatorMain.h  Emulatorspi_i2c.h  Platform.h
dependencies/eve_hal/Hdr/Simulation/: FT_EmulatorMain.h  FT_Gpu_Hal_Simulation.h  FT_Platform_Simulation.h  bt8xxemu.h
dependencies/eve_hal/Src/: App_Common.c  CoPro_Cmds.c  Eve_CoCmd_Buffered.c  Eve_CoCmd_Direct.c  FT_Gpu_Hal.c  Gpu_CoCmd.c  Gpu_CoCmd_Frame_Buffered.c  Gpu_CoCmd_Frame_Direct.c  Gpu_CoCmd_IO.c  Gpu_CoCmd_State.c  Gpu_CoCmd_Widgets.c  Hal_Utils.c  ILI9488.c
dependencies/eve_hal/Src/Arduino/: Gpu_Hal.cpp  Hal_I2C.cpp
dependencies/eve_hal/Src/FT900/: FT_Gpu_Hal_FT900.c  FT_KD2401.c  FT_LoadFile_FT900.c
dependencies/eve_hal/Src/FT90x/: Gpu_Hal.c
dependencies/eve_hal/Src/FT90x/fatfs/: diskio.c
dependencies/eve_hal/Src/FT93x/: Gpu_Hal.c
dependencies/eve_hal/Src/MSVC/: FT_Gpu_Hal_MSVC.c  FT_LoadFile_MSVC.c
dependencies/eve_hal/Src/Msvc/: Gpu_Hal.c
dependencies/eve_hal/Src/Msvc_Emulator/: Emu_main.cpp  Gpu_Hal.c
dependencies/eve_hal/Src/Simulation/: FT_Emulator.c  FT_EmulatorMain.c  FT_Gpu_Hal_Simulation.c  FT_LoadFile_Simulation.c  FT_Mcu_Hal_Simulation.c
dependencies/fatfs/: 00readme.txt  CMakeLists.txt  diskio_rp2040.c  ff.c  ff_ioctl_test.c  unicode.c
dependencies/ft4222/inc/: LibFT4222.h
dependencies/ft4222/lib/amd64/: LibFT4222.lib
dependencies/ft4222/lib/i386/: LibFT4222.lib
dependencies/ftd2xx/: ftd2xx.h
dependencies/mpsse_spi/include/: libMPSSE_spi.h
dependencies/mpsse_spi/lib/windows/i386/: libMPSSE.lib
dependencies/mpsse_spi/lib/windows/x64/: libMPSSE.lib
samples/STM32L476GDISCOVERY/: .cproject  .cproject_org  .mxproject  .project  .project_org  Readme.txt  STM32L476VG_FLASH.ld  _FLASH.ld  spi1_4.elf.launch  spi1_4.ioc
samples/STM32L476GDISCOVERY/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usb_host.h  usbh_conf.h
samples/STM32L476GDISCOVERY/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbh_conf.c  usbh_platform.c
samples/STM32L476GDISCOVERY/Src/Eve/: nuklear.h
samples/STM32L476GDISCOVERY/Src/Eve/dependencies/esd_core/: FT_CoPro_Cmds.h  Ft_Esd.c  Ft_Esd.h  Ft_Esd_BitmapHandle.h  Ft_Esd_BitmapInfo.c  Ft_Esd_BitmapInfo.h  Ft_Esd_CheckTypeSizes.c  Ft_Esd_CoCmd_IO.c  Ft_Esd_CoCmd_State.c  Ft_Esd_Core.c  Ft_Esd_Dl.h  Ft_Esd_Primitives.c  Ft_Esd_Primitives_Rect.c  Ft_Esd_ResourceInfo.c  Ft_Esd_ResourceInfo.h  Ft_Esd_TouchTag.c  Ft_Esd_Utility.h
samples/STM32L476GDISCOVERY/Src/Eve/dependencies/eve_hal/: EVE_Config.h  EVE_GpuDefs.h  EVE_GpuTypes.h  EVE_Hal.h  EVE_Hal.md  EVE_HalImpl.h  EVE_HalImpl_STM32L476GDISCOVERY.c  EVE_ILI9488.h  EVE_IntTypes_MSVC12.h  EVE_LoadFile.h  EVE_LoadFile_FATFS.c  EVE_Platform.h  EVE_Platform_FT9XX.h  EVE_Platform_STM32L476GDISCOVERY.h  EVE_Platform_WIN32.h
samples/STM32L476GDISCOVERY/Src/Eve/dependencies/fatfs/: ccsbcs.x  diskio.c  diskio.h  ffconf.h  syscall.c
samples/STM32L476GDISCOVERY/Src/Eve/dependencies/mpsse_spi/include/: libMPSSE_spi.h
samples/STM32L476GDISCOVERY/Src/Eve/src/: nuklear_eve.c
src/: nuklear_eve.c  nuklear_eve.h
