
FILE(GLOB SRCS *.c)
FILE(GLOB HDRS *.h)
SOURCE_GROUP("" FILES ${SRCS} ${HDRS})

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/dependencies/eve_hal/Hdr")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/dependencies/eve_hal/Hdr/Simulation")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/dependencies/eve_hal/Hdr/MSVC")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/dependencies/eve_hal/Hdr/FT900")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/dependencies/esd_core")

ADD_DEFINITIONS(-DEVE_GRAPHICS_VM816C)
ADD_DEFINITIONS(-DEVE_PLATFORM_BT8XXEMU)

ADD_LIBRARY(esd_core
  ${SRCS}
  ${HDRS}
)

TARGET_LINK_LIBRARIES(esd_core
  eve_hal
)
